--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,28 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>A PyTorch Semantic Segmentation Toolbox</strong><br />
+      Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
+      <a href="assets/pdf/toolbox.pdf">[PDF]</a>
+			<a href="https://github.com/speedinghzl/pytorch-segmentation-toolbox">[CODE]</a>
+			<strong>Note:</strong><a style="color:#FF0000;">We provide PyTorch implementations for DeeplabV3 and PSPNet. By adopting Resnet101 as the backbone, our implementations of DeeplabV3 and PSPNet achieve 78.9% and 78.3% mIoU scores on the Cityscapes under the single-scale testing scheme. <strong>The advantages: 1) integrate Syn BN; 2) take less time and computational resources; 3) achieve better performance.</strong> The code is easily to be readable and modifiable. We hope our implementations can serve the researchers to make further improvements on the challenging semantic segmentation tasks.</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Revisiting Pre-training: An Efficient Training Method for Image Classification</strong><br />
+      Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Shiyu Chang, Jinjun Xiong, Thomas S. Huang<br />
+      <a href="https://arxiv.org/abs/1811.09347">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>SG-One: Similarity Guidance Network for One-Shot Semantic Segmentation</strong><br />
       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Thomas Huang<br />
       <a href="https://arxiv.org/pdf/1810.09091">[arxiv]</a>
@@ -47,7 +69,7 @@
   <div class="media-body">
     <p class="media-heading">
       <strong>Devil in the Details: Towards Accurate Single and Multiple Human Parsing</strong><br />
-      Ting Liu, Tao Ruan, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
+      Tao Ruan, Ting Liu, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
 			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
       <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
 			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
@@ -62,6 +84,7 @@
       <strong>Weakly Supervised Scene Parsing with Point-based Distance Metric Learning</strong><br />
       Rui Qian, <strong>Yunchao Wei</strong>, Honghui Shi, Jiachen Li, Jiaying Liu, Thomas Huang<br />
 			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+			<a href="https://arxiv.org/abs/1811.02233">[arxiv]</a>
     </p>
   </div>
 </div>
@@ -72,6 +95,7 @@
       <strong>STA: Spatial-Temporal Attention for Large-Scale Video-based Person Re-Identification</strong><br />
       Yang Fu, Xiaoyang Wang, <strong>Yunchao Wei</strong>, Thomas Huang<br />
       Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
+			<a href="https://arxiv.org/abs/1811.04129">[arxiv]</a>
     </p>
   </div>
 </div>
