--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -12,8 +12,8 @@
       <strong>A PyTorch Semantic Segmentation Toolbox</strong><br />
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
       <a href="assets/pdf/toolbox.pdf">[PDF]</a>
-			<a href="https://github.com/speedinghzl/pytorch-segmentation-toolbox">[CODE]</a>
-			<strong>Note:</strong><a style="color:#FF0000;">We provide PyTorch implementations for DeeplabV3 and PSPNet. By adopting Resnet101 as the backbone, our implementations of DeeplabV3 and PSPNet achieve 78.9% and 78.3% mIoU scores on the Cityscapes under the single-scale testing scheme. <strong>The advantages: 1) integrate Syn BN; 2) take less time and computational resources; 3) achieve better performance.</strong> The code is easily to be readable and modifiable. We hope our implementations can serve the researchers to make further improvements on the challenging semantic segmentation tasks.</a>
+			<a href="https://github.com/speedinghzl/pytorch-segmentation-toolbox">[CODE]</a><br />
+			<strong>Note:</strong><a style="color:#FF0000;"> We provide PyTorch implementations for DeeplabV3 and PSPNet. <strong>The advantages: 1) integrate Syn BN; 2) take less time and computational resources; 3) achieve better performance.</strong> The code is easily to be readable and modifiable. We hope our toolbox can serve the researchers to make further improvements on the semantic segmentation tasks.</a>
     </p>
   </div>
 </div>
@@ -73,7 +73,7 @@
 			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
       <a href="https://arxiv.org/pdf/1809.05996">[arxiv]</a>
 			<a href="https://github.com/liutinglt/CE2P">[CODE]</a><br />
-			<strong>Note:</strong><a style="color:#FF0000;">This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</a>
+			<strong>Note:</strong><a style="color:#FF0000;"> This work achieves the 1st places on all human paring tracks in the 2nd LIP Challenge</a>
     </p>
   </div>
 </div>
