--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -13,7 +13,7 @@
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Wenyu Liu<br />
       <a href="assets/pdf/toolbox.pdf">[PDF]</a>
 			<a href="https://github.com/speedinghzl/pytorch-segmentation-toolbox">[CODE]</a><br />
-			<strong>Note:</strong><a style="color:#FF0000;"> We provide PyTorch implementations for DeeplabV3 and PSPNet. <strong>The advantages: 1) integrate Syn BN; 2) take less time and computational resources; 3) achieve better performance.</strong> The code is easily to be readable and modifiable. We hope our toolbox can serve the researchers to make further improvements on the semantic segmentation tasks.</a>
+			<strong>Note:</strong><a style="color:#FF0000;"> We provide PyTorch implementations for DeeplabV3 and PSPNet. The advantages: 1) integrate Syn BN; 2) take less time and computational resources for training; 3) achieve better performance.</a>
     </p>
   </div>
 </div>
