--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -21,6 +21,27 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>CCNet: Criss-Cross Attention for Semantic Segmentation</strong><br />
+      Zilong Huang, Xinggang Wang, Lichao Huang, Chang Huang, <strong>Yunchao Wei</strong>, Wenyu Liu<br />
+      <a href="https://arxiv.org/abs/1811.11721">[arxiv]</a>
+			<a href="https://github.com/speedinghzl/CCNet">[CODE]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>One Shot Domain Adaptation for Person Re-Identification</strong><br />
+      Yang Fu, <strong>Yunchao Wei</strong>, Guanshuo Wang, Jiwei Li, Xi Zhou, Honghui Shi, Thomas Huang<br />
+      <a href="https://arxiv.org/abs/1811.10144">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Revisiting Pre-training: An Efficient Training Method for Image Classification</strong><br />
       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Shiyu Chang, Jinjun Xiong, Thomas S. Huang<br />
       <a href="https://arxiv.org/abs/1811.09347">[arxiv]</a>
@@ -179,6 +200,7 @@
        <strong>Yunchao Wei</strong>, Huaxin Xiao, Honghui Shi, Zequn Jie, Jiashi Feng, Thomas Huang<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>spotlight</strong>)<br />
 			<a href="https://arxiv.org/abs/1805.04574">[PDF]</a>
+			<a href="assets/code/train_MDC.prototxt">[Prototxt]</a>
    </p>
   </div>
 </div>
