--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -55,6 +55,7 @@
       <strong>SG-One: Similarity Guidance Network for One-Shot Semantic Segmentation</strong><br />
       Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Thomas Huang<br />
       <a href="https://arxiv.org/pdf/1810.09091">[arxiv]</a>
+			<a href="https://github.com/xiaomengyc/SG-One">[CODE]</a>
     </p>
   </div>
 </div>
@@ -175,7 +176,7 @@
     <p class="media-heading">
       <strong>Self-produced Guidance for Weakly-supervised Object Localization</strong><br />
        Xiaolin Zhang, <strong>Yunchao Wei</strong>, Guoliang Kang, Yi Yang, Thomas Huang<br />
-			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018
+			 European Conference on Computer Vision (<strong>ECCV</strong>), 2018<br />
 			 <a href="https://arxiv.org/abs/1807.08902">[PDF]</a>
 			 <a href="https://github.com/xiaomengyc/SPG">[CODE]</a>
     </p>
