--- a/_includes/news.html
+++ b/_includes/news.html
@@ -10,13 +10,17 @@
 		  aria-hidden="true"></i>Three papers accepted in ECCV 2018.</li>
 			<li><i class="fa fa-flag"  color="#FF0000"
 			aria-hidden="true"></i>BJTU-UIUC team won the
-	    1st places in all three human parsing tracks in the 2nd LIP Challenge.</li>
+	    1st places in all three human parsing tracks in the 2nd LIP Challenge. <br />
+			Members: Ting Liu*, Tao Ruan*, <strong>Yunchao Wei</strong>, Jie Zhao, Shikui Wei, Honghui Shi, Jinjun Xiong, Yao Zhao, Thomas Huang
+		  </li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>Three papers accepted in CVPR 2018
 		  with one oral and one spotlight. One paper accepted by TMM.</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>NUS-Qihoo-UIUC_DPNs team won the
-	    2nd places in all four video-related tracks in ILSVRC 2017.</li>
+	    2nd places in all four video-related tracks in ILSVRC 2017. <br />
+			Members: <strong>Yunchao Wei</strong> Mengdan Zhang, Honghui Shi, Jianan Li, Yunpeng Chen, Jiashi Feng, Jian Dong, Shuicheng Yan
+			</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>Two papers accepted in ACM MM 2017
 	    and one paper accepted in ICCV 2017.</li>
