--- a/_includes/news.html
+++ b/_includes/news.html
@@ -11,7 +11,7 @@
 			<li><i class="fa fa-flag"  color="#FF0000"
 			aria-hidden="true"></i>BJTU-UIUC team won the
 	    1st places in all three human parsing tracks in the 2nd LIP Challenge. <br />
-			Members: Ting Liu*, Tao Ruan*, <strong>Yunchao Wei</strong>, Jie Zhao, Shikui Wei, Honghui Shi, Jinjun Xiong, Yao Zhao, Thomas Huang
+			&nbsp&nbsp&nbspMembers: Ting Liu*, Tao Ruan*, <strong>Yunchao Wei</strong>, Jie Zhao, Shikui Wei, Honghui Shi, Jinjun Xiong, Yao Zhao, Thomas Huang
 		  </li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>Three papers accepted in CVPR 2018
@@ -19,7 +19,7 @@
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>NUS-Qihoo-UIUC_DPNs team won the
 	    2nd places in all four video-related tracks in ILSVRC 2017. <br />
-			Members: <strong>Yunchao Wei</strong> Mengdan Zhang, Honghui Shi, Jianan Li, Yunpeng Chen, Jiashi Feng, Jian Dong, Shuicheng Yan
+			&nbsp&nbsp&nbspMembers: <strong>Yunchao Wei</strong>, Mengdan Zhang, Honghui Shi, Jianan Li, Yunpeng Chen, Jiashi Feng, Jian Dong, Shuicheng Yan
 			</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>Two papers accepted in ACM MM 2017
