--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -201,6 +201,7 @@
        <strong>Yunchao Wei</strong>, Huaxin Xiao, Honghui Shi, Zequn Jie, Jiashi Feng, Thomas Huang<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2018 (<strong>spotlight</strong>)<br />
 			<a href="https://arxiv.org/abs/1805.04574">[PDF]</a>
+			<a href="assets/projects/mdc.html">[Project]</a>
 			<a href="assets/code/train_MDC.prototxt">[Prototxt]</a>
    </p>
   </div>
@@ -236,6 +237,8 @@
        Huaxin Xiao, Jiashi Feng, <strong>Yunchao Wei</strong>, Maojun Zhang<br />
 			 IEEE Transactions on Multimedia (<strong>TMM</strong>), 2018<br />
       <a href="https://arxiv.org/abs/1708.05595">[PDF]</a>
+			<a href="https://github.com/huaxinxiao/SaliencyDetection">[CODE]</a>
+			<strong>Note:</strong><a style="color:#FF0000;"> This work provides the state-of-the-art solution for saliency object detection.</a>
     </p>
   </div>
 </div>
