--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -1,5 +1,10 @@
 <p> </p>
 
+<div class='positions'>
+<h3>Open Positions</h3>
+			<p>I received the ARC Discovery Early Career Researcher Award (DECRA) Fellowship between 2019-2021 and will be a Lecturer (Assistant Professor) at Faculty of Engineering and Information Technology, University of Technology Sydney.<a style="color:#FF0000;">I am looking for self-motivated PhD/visiting students. If you would like to work with me, please drop me an email.</a></p>
+</div>
+
 ﻿<div class='researchInt'>
 <h3>Research Interests</h3>
 			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. <br>
