--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -2,7 +2,7 @@
 
 <div class='positions'>
 <h3>Open Positions</h3>
-			<p>I received the ARC Discovery Early Career Researcher Award (DECRA) Fellowship between 2019-2021 and will be a Lecturer (Assistant Professor) at Faculty of Engineering and Information Technology, University of Technology Sydney.<a style="color:#FF0000;">I am looking for self-motivated PhD/visiting students. If you would like to work with me, please drop me an email.</a></p>
+			<p>I received the ARC Discovery Early Career Researcher Award (DECRA) Fellowship between 2019-2021 and will joint <strong>University of Technology Sydney</strong> as a Lecturer (Assistant Professor). <a style="color:#FF0000;">I am currently looking for self-motivated PhD/visiting students. If you would like to work with me, please drop me an email.</a></p>
 </div>
 
 ﻿<div class='researchInt'>
