--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,6 +3,12 @@
 	<h3> News</h3>
 	<ul>
 		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>I'm going to co-organize the workshop "Weakly Supervised Learning for Real-World Computer Vision Applications and the 1st Learning from Imperfect Data (LID) Challenge" on CVPR 2019. More details please refer to <a href="https://lidchallenge.github.io">[link]</a>.</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>I'm going to co-organize the workshop "Augmented Human: Human-centric Understanding and 2D/3D Synthesis, and the third Look Into Person (LIP) Challenge" on CVPR 2019. More details please refer to <a href="https://vuhcs.github.io">[link]</a>.</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>The slides of <a href="assets/pdf/VALSE-2019-Workshop-YCWEI.pdf">VALSE-2019-Workshop</a> and <a href="assets/pdf/VALSE-2019-Tutorial-YCWEI.pdf">VALSE-2019-Tutorial</a> are avaliable now!</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>Four papers accepted in AAAI 2019 and one paper accepted by PR.</li>
 			<li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>One paper accepted in NIPS 2018.</li>
