--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -90,6 +90,56 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>Boundary Perception Guidance: A Scribble-Supervised Semantic Segmentation Approach</strong><br />
+      Bin Wang, Guojun Qi, Sheng Tang, Tianzhu Zhang, <strong>Yunchao Wei</strong>, Linghui Li, Yongdong Zhang<br />
+			International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>), 2019 <br />
+	  </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Geometry-Aware Distillation for Indoor Semantic Segmentation</strong><br />
+			Jianbo Jiao, <strong>Yunchao Wei</strong>, Zequn Jie, Honghui Shi, Rynson W.H. Lau, Thomas S. Huang<br />
+			IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019 <br />
+	  </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Low-Rank Tensor Completion With a New Tensor Nuclear Norm Induced by Invertible Linear Transforms</strong><br />
+			Canyi Lu, Xi Peng, <strong>Yunchao Wei</strong><br />
+			IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019 <br />
+	  </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Magic-wall: Visualizing Room Decoration by Enhanced Wall Segmentation</strong><br />
+      Ting Liu, <strong>Yunchao Wei</strong>, Yao Zhao, Si Liu, Shikui Wei<br />
+			IEEE Transactions on Image Processing (<strong>TIP</strong>), 2019 <br />
+	  </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Concealed Object Detection for Activate Millimeter Wave Image</strong><br />
+      Ting Liu, Yao Zhao, <strong>Yunchao Wei</strong>, Yufeng Zhao, Shikui Wei<br />
+			IEEE Transactions on Industrial Electronics (<strong>TIE</strong>), 2019 <br />
+	  </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Devil in the Details: Towards Accurate Single and Multiple Human Parsing</strong><br />
       Tao Ruan, Ting Liu, Zilong Huang, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao, Thomas Huang<br />
 			Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2019 <br />
