--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -21,27 +21,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>CCNet: Criss-Cross Attention for Semantic Segmentation</strong><br />
-      Zilong Huang, Xinggang Wang, Lichao Huang, Chang Huang, <strong>Yunchao Wei</strong>, Wenyu Liu<br />
-      <a href="https://arxiv.org/abs/1811.11721">[arxiv]</a>
-			<a href="https://github.com/speedinghzl/CCNet">[CODE]</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
-      <strong>One Shot Domain Adaptation for Person Re-Identification</strong><br />
-      Yang Fu, <strong>Yunchao Wei</strong>, Guanshuo Wang, Jiwei Li, Xi Zhou, Honghui Shi, Thomas Huang<br />
-      <a href="https://arxiv.org/abs/1811.10144">[arxiv]</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>Revisiting Pre-training: An Efficient Training Method for Image Classification</strong><br />
       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Shiyu Chang, Jinjun Xiong, Thomas S. Huang<br />
       <a href="https://arxiv.org/abs/1811.09347">[arxiv]</a>
@@ -86,6 +65,53 @@
 <h4>
 	<a name='2019'></a> 2019
 </h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>SPGNet: Semantic Prediction Guidance for Scene Parsing </strong><br />
+			Bowen Cheng, Liang-Chieh Chen, <strong>Yunchao Wei</strong>, Yukun Zhu, Zilong Huang, Jinjun Xiong, Thomas Huang, Wen-Mei Hwu, Honghui Shi
+ <br />
+			IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 <br />
+      <a href="https://arxiv.org/abs/1908.09798">[PDF]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Integral Object Mining via Online Attention Accumulation </strong><br />
+      Peng-Tao Jiang, Qibin Hou, Yang Cao, Ming-Ming Cheng, <strong>Yunchao Wei</strong>, Hong-Kai Xiong <br />
+			IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 <br />
+      <a href="https://mmcheng.net/oaa/">[Project]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>CCNet: Criss-Cross Attention for Semantic Segmentation</strong><br />
+      Zilong Huang, Xinggang Wang, Lichao Huang, Chang Huang, <strong>Yunchao Wei</strong>, Wenyu Liu<br />
+			IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 <br />
+      <a href="https://arxiv.org/abs/1811.11721">[arxiv]</a>
+			<a href="https://github.com/speedinghzl/CCNet">[CODE]</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Self-similarity Grouping: A Simple Unsupervised Cross Domain Adaptation Approach for Person Re-identification</strong><br />
+      Yang Fu, <strong>Yunchao Wei</strong>, Guanshuo Wang, Yuqian Zhou, Honghui Shi, Thomas Huang<br />
+			IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2019 (<strong>oral</strong>) <br />
+      <a href="https://arxiv.org/abs/1811.10144">[arxiv]</a>
+			<a href="https://github.com/OasisYang/SSG">[CODE]</a>
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
