--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -8,16 +8,26 @@
 			<h3>
 				Yunchao Wei 魏云超
 			</h3>
-			<p>
-			 I am currently a Postdoc Researcher in Prof. <a href="https://www.ece.illinois.edu/directory/profile/t-huang1">Thomas Huang</a>'s <a href="http://ifp-uiuc.github.io/">Image Formation and Professing (IFP)</a> group at Beckman Institute, University of Illinois Urbana-Champaign (UIUC). I received PhD from Beijing Jiaotong University, advised by Prof. <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao Yao</a>. I was a Visiting Student from Nov. 2013 to Nov. 2015 in the Learning and Vision (LV) Research Group of National University of Singapore (NUS), working with Prof. <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng	Yan</a>. I was a Postdoc Researcher from July 2016 to Sept.2017 in the LV Research Group of NUS, working with Prof. <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>.
-			</p>
+      <p>
+      Lecturer (Assistant Professor)/ARC DECRA Fellow
+      </p>
+      <p>
+      <a href="http://reler.net/">ReLER</a> | <a href="https://www.uts.edu.au/research-and-teaching/our-research/centre-artificial-intelligence">Centre for Artificial Intelligence</a> | <a href="https://www.uts.edu.au/">University of Technology Sydney<\a>
+      </p>
+      <p>
+      Office: Room 123, Level 10, Building 11, 81 Broadway, Ultimo NSW 2007 (PO Box 123)
+      </p>
+      <p>
+      Email: Yunchao.Wei AT uts.edu.au | wychao1987 AT gmail.com
+      </p>
 
 			<h3 style="padding-top:-5px"></h3>
-
-			{% if site.email %}
+      <!--
+  		{% if site.email %}
 				 <a href="mailto: {{site.email}}"><i class="fa fa-envelope"></i> &nbsp; {{site.email}}</a>
 			{% endif %}
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      -->
 			{% if site.website %}
 				 <a href="https://scholar.google.com.sg/citations?user=qL9Csv0AAAAJ&hl=en" target="_blank"><i class="fa fa-globe"></i> &nbsp; {{site.website}}</a>
 			{% endif %}
