--- a/_includes/researchInt.html
+++ b/_includes/researchInt.html
@@ -1,18 +1,14 @@
 <p> </p>
 
 <div class='positions'>
-<h3>Open Positions</h3>
-			<p>I received the ARC Discovery Early Career Researcher Award (DECRA) Fellowship between 2019-2021 and will join <strong>University of Technology Sydney</strong> as a Lecturer (Assistant Professor). <a style="color:#FF0000;">I am currently looking for self-motivated PhD/visiting students. If you would like to work with me, please drop me an email.</a></p>
+<h3>About Me</h3>
+<p>
+ I received PhD from Beijing Jiaotong University, advised by Prof. <a href="http://mepro.bjtu.edu.cn/zhaoyao/e_index.htm">Zhao Yao</a>. Before joining UTS, I was a Postdoc Researcher in Prof. <a href="https://www.ece.illinois.edu/directory/profile/t-huang1">Thomas Huang</a>'s <a href="http://ifp-uiuc.github.io/">Image Formation and Professing (IFP)</a> group at Beckman Institute, UIUC, from 2017 to 2019. I was a Visiting Student from 2013 to 2015 and a Postdoc Researcher from 2016 to 2017 in the Learning and Vision (LV) Research Group at National University of Singapore (NUS), working with Prof. <a href="https://www.ece.nus.edu.sg/stfpage/eleyans/">Shuicheng	Yan</a> and Prof. <a href="https://sites.google.com/site/jshfeng/">Jiashi Feng</a>.
+</p>
 </div>
 
 ﻿<div class='researchInt'>
 <h3>Research Interests</h3>
-			<p>My general research interest is to develop deep learning algorithms for challenging computer vision and multimedia problems. <br>
-                        Recently, I focus on:</p>
-                        <ul>
-							<li>Weakly supervised object detection and semantic segmentation</li>
-							<li>Video analysis, including detection and tracking</li>
-							<li>Multi-label classification</li>
-							<li>Multi-modal analysis</li>
-                        </ul>
+			<p>Deep learning and its applications in computer vision, including image classification, object detection, semantic segmentation, etc.</p>
+
 </div>
