--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -12,7 +12,7 @@
       Lecturer (Assistant Professor)/ARC DECRA Fellow
       </p>
       <p>
-      <a href="http://reler.net/">ReLER</a> | <a href="https://www.uts.edu.au/research-and-teaching/our-research/centre-artificial-intelligence">Centre for Artificial Intelligence</a> | <a href="https://www.uts.edu.au/">University of Technology Sydney<\a>
+      <a href="http://reler.net/">ReLER</a> | <a href="https://www.uts.edu.au/research-and-teaching/our-research/centre-artificial-intelligence">Centre for Artificial Intelligence</a> | <a href="https://www.uts.edu.au/">University of Technology Sydney</a>
       </p>
       <p>
       Office: Room 123, Level 10, Building 11, 81 Broadway, Ultimo NSW 2007 (PO Box 123)
