--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -72,6 +72,52 @@
 </div>
 
 
+<h4>
+	<a name='2020'></a> 2019
+</h4>
+
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Referring Image Segmentation by Generative Adversarial Learning</strong><br />
+      Shuang Qiu, Yao Zhao, Jianbo Jiao, <strong>Yunchao Wei</strong>, Shikui Wei<br />
+      IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Rich Features Embedding for Cross-modal Retrieval: A Simple Baseline</strong><br />
+      Xin Fu, Yao Zhao, <strong>Yunchao Wei</strong>, Yufeng Zhao, Shikui Wei<br />
+      IEEE Transactions on Multimedia (<strong>TMM</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Parameter Distribution Balanced CNNs</strong><br />
+      Lixin Liao, Yao Zhao, Shikui Wei, <strong>Yunchao Wei</strong>, Jingdong Wang<br />
+      IEEE Transactions on Neural Networks and Learning Systems (<strong>TNNLS</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Reliability Does Matter: An End-to-End Weakly Supervised Semantic Segmentation Approach</strong><br />
+      Bingfeng Zhang, Jinmin Xiao, <strong>Yunchao Wei</strong>, Mingjie Sun, Kaizhu Huang<br />
+      Proceedings of the AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2020 <br />
+			<a href="https://arxiv.org/abs/1911.08039">[arxiv]</a>
+    </p>
+  </div>
+</div>
+
 
 <h4>
 	<a name='2019'></a> 2019
