--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,8 +2,9 @@
 <div class='news'>
 	<h3> News</h3>
 	<ul>
-
-	  	<li><i class="fa fa-flag"  color="#FF0000"
+                  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>We wll organize the 2nd Learning from Imperfect Data (LID) Workshop in CVPR 2020. More details please refer to <a href="https://lidchallenge.github.io">[link]</a>.</li>
+	  	  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>I'm going to co-organize the workshop on "Real-World Recognition from Low-Quality Images and Videos (RLQ)" in ICCV 2019. More details please refer to <a href="https://www.forlq.org">[link]</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>I'm going to co-organize the workshop on "Weakly Supervised Learning for Real-World Computer Vision Applications and the 1st Learning from Imperfect Data (LID) Challenge" in CVPR 2019. More details please refer to <a href="https://lidchallenge.github.io">[link]</a>.</li>
