--- a/_includes/news.html
+++ b/_includes/news.html
@@ -2,9 +2,15 @@
 <div class='news'>
 	<h3> News</h3>
 	<ul>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>We release <strong>University-1652</strong>, a multi-view multi-source benchmark for drone-based geo-localization <a href="https://github.com/layumi/University1652-Baseline">[link]</a>.</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>We release <strong>Agriculture-Vision</strong>, the first large-scale aerial farmland image dataset for semantic segmentation of agricultural patterns <a href="https://www.agriculture-vision.com/dataset">[link]</a>.</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>We will organize the Real-world Recognition from Low-quality Inputs and 1st Tiny Object Detection Challenge (RLQ-TOD) workshop in ECCV 2020 <a href="https://rlq-tod.github.io/">[link]</a>.</li>
                   <li><i class="fa fa-flag"  color="#FF0000"
-		  aria-hidden="true"></i>We wll organize the 2nd Learning from Imperfect Data (LID) Workshop in CVPR 2020. More details please refer to <a href="https://lidchallenge.github.io">[link]</a>.</li>
-	  	  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>We will organize the 2nd Learning from Imperfect Data (LID) Workshop in CVPR 2020 <a href="https://lidchallenge.github.io">[link]</a>.</li>
+	  	 <!-- <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>I'm going to co-organize the workshop on "Real-World Recognition from Low-Quality Images and Videos (RLQ)" in ICCV 2019. More details please refer to <a href="https://www.forlq.org">[link]</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>I'm going to co-organize the workshop on "Weakly Supervised Learning for Real-World Computer Vision Applications and the 1st Learning from Imperfect Data (LID) Challenge" in CVPR 2019. More details please refer to <a href="https://lidchallenge.github.io">[link]</a>.</li>
@@ -39,5 +45,6 @@
 	    with one oral and one spotlight.</li>
 	    <li><i class="fa fa-flag"  color="#FF0000"
 	    aria-hidden="true"></i>One paper accepted in ICME 2017.</li>
+		-->
 	</ul>
 </div>
