--- a/_includes/news.html
+++ b/_includes/news.html
@@ -7,7 +7,7 @@
 		  <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>We release <strong>Agriculture-Vision</strong>, the first large-scale aerial farmland image dataset for semantic segmentation of agricultural patterns <a href="https://www.agriculture-vision.com/dataset">[link]</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
-		  aria-hidden="true"></i>We will organize the Real-world Recognition from Low-quality Inputs and 1st Tiny Object Detection Challenge (RLQ-TOD) workshop in ECCV 2020 <a href="https://rlq-tod.github.io/">[link]</a>.</li>
+		  aria-hidden="true"></i>We will organize the Real-world Recognition from Low-quality Inputs and 1st Tiny Object Detection Challenge workshop in ECCV 2020 <a href="https://rlq-tod.github.io/">[link]</a>.</li>
                   <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>We will organize the 2nd Learning from Imperfect Data (LID) Workshop in CVPR 2020 <a href="https://lidchallenge.github.io">[link]</a>.</li>
 	  	 <!-- <li><i class="fa fa-flag"  color="#FF0000"
