--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,27 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
+      Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      <a href="https://arxiv.org/pdf/2002.12186.pdf">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
+	    <strong>Note:</strong><a style="color:#FF0000;"> We collect 1652 buildings of 72 universities around the world for drone-view target localization and drone navigation.</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>AlignSeg: Feature-Aligned Segmentation Networks</strong><br />
+      Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang<br />
+      <a href="https://arxiv.org/abs/2003.00872">[arxiv]</a><br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>Self-Correction for Human Parsing</strong><br />
       Peike Li, Yunqiu Xu, <strong>Yunchao Wei</strong>, Yi Yang<br />
       <a href="https://arxiv.org/pdf/1910.09777.pdf">[arxiv]</a><a href="https://github.com/PeikeLi/Self-Correction-Human-Parsing">[CODE]</a><br />
@@ -76,6 +97,55 @@
 	<a name='2020'></a> 2020
 </h4>
 
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Interactive Object Segmentation with Inside-Outside Guidance</strong><br />
+      Shiyin Zhang, Jun Hao Liew, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 (<strong>oral</strong>)<br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Memory Aggregation Networks for Efficient Interactive Video Object Segmentation</strong><br />
+      Jiaxu Miao, <strong>Yunchao Wei</strong>,  Yi Yang<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Referring Image Segmentation via Cross-Modal Progressive Comprehension</strong><br />
+      Shaofei Huang, Tianrui Hui, Si Liu, Guanbin Li, <strong>Yunchao Wei</strong>,  Jizhong Han, Luoqi Liu, Bo Li<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Differential Treatment for Stuff and Things: A Simple Unsupervised Domain Adaptation Method for Semantic Segmentation</strong><br />
+      Zhonghao Wang, Mo Yu, <strong>Yunchao Wei</strong>, Rogerio Feris, Jinjun Xiong, Wen-Mei Hwu, Thomas S. Huang, Honghui Shi<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Agriculture-Vision: A Large Aerial Image Database for Agricultural Pattern Analysis</strong><br />
+      Mang Tik Chiu, Xingqian Xu, <strong>Yunchao Wei</strong>, Zilong Huang, Alexander Schwing, Robert Brunner, Hrant Khachatrian, Hovnatan Karapetyan, Ivan Dozier, Greg Rose, David Wilson, Adrian Tudor, Naira Hovakimyan, Thomas S. Huang, Honghui Shi<br />
+      IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
