--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -143,6 +143,7 @@
       <strong>Agriculture-Vision: A Large Aerial Image Database for Agricultural Pattern Analysis</strong><br />
       Mang Tik Chiu, Xingqian Xu, <strong>Yunchao Wei</strong>, Zilong Huang, Alexander Schwing, Robert Brunner, Hrant Khachatrian, Hovnatan Karapetyan, Ivan Dozier, Greg Rose, David Wilson, Adrian Tudor, Naira Hovakimyan, Thomas S. Huang, Honghui Shi<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+      <a href="https://arxiv.org/abs/2001.01306">[arxiv]</a><a href="https://www.agriculture-vision.com/dataset">[Project]</a><a href="https://www.eurekalert.org/pub_releases/2020-03/uoig-nai030620.php">[News]</a>
     </p>
   </div>
 </div>
