--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,10 +9,10 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
-      Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      <a href="https://arxiv.org/pdf/2002.12186.pdf">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> We collect 1652 buildings of 72 universities around the world for drone-view target localization and drone navigation.</a>
+      <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
+      Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><br />
+	    <strong>Note:</strong><a style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</a>
     </p>
   </div>
 </div>
