--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,6 +20,17 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
+      <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
+      Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
+	    <strong>Note:</strong><a style="color:#FF0000;"> We annotate 1652 buildings in 72 universities around the world.</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
       <strong>AlignSeg: Feature-Aligned Segmentation Networks</strong><br />
       Zilong Huang, <strong>Yunchao Wei</strong>, Xinggang Wang, Honghui Shi, Wenyu Liu, Thomas S. Huang<br />
       <a href="https://arxiv.org/abs/2003.00872">[arxiv]</a><br />
