--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -74,17 +74,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>SG-One: Similarity Guidance Network for One-Shot Semantic Segmentation</strong><br />
-      Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Thomas Huang<br />
-      <a href="https://arxiv.org/pdf/1810.09091">[arxiv]</a>
-			<a href="https://github.com/xiaomengyc/SG-One">[CODE]</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>Decoupled Classification Refinement: Hard False Positive Suppression for Object Detection</strong><br />
       Bowen Cheng, <strong>Yunchao Wei</strong>, Honghui Shi, Rogerio Feris, Jinjun Xiong, Thomas Huang<br />
       <a href="https://arxiv.org/abs/1810.04002">[arxiv]</a>
@@ -107,6 +96,18 @@
 <h4>
 	<a name='2020'></a> 2020
 </h4>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>SG-One: Similarity Guidance Network for One-Shot Semantic Segmentation</strong><br />
+      Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang, Thomas Huang<br />
+      IEEE Transactions on Cybernetics (<strong>TCYB</strong>), 2020 <br />
+      <a href="https://arxiv.org/pdf/1810.09091">[arxiv]</a>
+			<a href="https://github.com/xiaomengyc/SG-One">[CODE]</a>
+    </p>
+  </div>
+</div>
 
 <div class="media">
   <div class="media-body">
