--- a/_includes/news.html
+++ b/_includes/news.html
@@ -10,6 +10,8 @@
 		  aria-hidden="true"></i>We will organize the Real-world Recognition from Low-quality Inputs and 1st Tiny Object Detection Challenge workshop in ECCV 2020 <a href="https://rlq-tod.github.io/">[link]</a>.</li>
                   <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>We will organize the 2nd Learning from Imperfect Data (LID) Workshop in CVPR 2020 <a href="https://lidchallenge.github.io">[link]</a>.</li>
+		  <li><i class="fa fa-flag"  color="#FF0000"
+		  aria-hidden="true"></i>The slides of <a href="assets/pdf/VALSE-2019-Workshop-YCWEI.pdf">VALSE-2019-Workshop</a> and <a href="assets/pdf/VALSE-2019-Tutorial-YCWEI.pdf">VALSE-2019-Tutorial</a> are avaliable now!</li>
 	  	 <!-- <li><i class="fa fa-flag"  color="#FF0000"
 		  aria-hidden="true"></i>I'm going to co-organize the workshop on "Real-World Recognition from Low-Quality Images and Videos (RLQ)" in ICCV 2019. More details please refer to <a href="https://www.forlq.org">[link]</a>.</li>
 		  <li><i class="fa fa-flag"  color="#FF0000"
