--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -97,6 +97,18 @@
 	<a name='2020'></a> 2020
 </h4>
 
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>CCNet: Criss-Cross Attention for Semantic Segmentation</strong><br />
+      Zilong Huang, Xinggang Wang, <strong>Yunchao Wei</strong>, Lichao Huang, Humphrey Shi, Wenyu Liu, Thomas S. Huang<br />
+	    IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2020 <br />
+			<a href="https://github.com/speedinghzl/CCNet">[CODE]</a>
+    </p>
+  </div>
+</div>
+
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
