--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,17 +9,6 @@
 <div class="media">
   <div class="media-body">
     <p class="media-heading">
-      <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
-      Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
-      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><br />
-	    <strong>Note:</strong><a style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</a>
-    </p>
-  </div>
-</div>
-
-<div class="media">
-  <div class="media-body">
-    <p class="media-heading">
       <strong>University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization</strong><br />
       Zhedong Zheng, <strong>Yunchao Wei</strong>, Yi Yang<br />
       <a href="https://arxiv.org/abs/2002.12186">[arxiv]</a><a href="https://github.com/layumi/University1652-Baseline">[Project]</a><br />
@@ -96,6 +85,40 @@
 <h4>
 	<a name='2020'></a> 2020
 </h4>
+
+
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Collaborative Video Object Segmentation by Foreground-Background Integration</strong><br />
+      Zongxin Yang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 (<strong>spotlight</strong>)<br />
+      <a href="https://arxiv.org/pdf/2003.08333.pdf">[arxiv]</a><br />
+	    <strong>Note:</strong><a style="color:#FF0000;"> Achieve the state of the art performance on DAVIS 2016, 2017 and Youtube-VOS.</a>
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Inter-Image Communication for Weakly Supervised Localization</strong><br />
+      Xiaolin Zhang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
+
+<div class="media">
+  <div class="media-body">
+    <p class="media-heading">
+      <strong>Content-Consistent Matching for Domain Adaptive Semantic Segmentation</strong><br />
+      Guangrui Li, Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      European Conference on Computer Vision (<strong>ECCV</strong>), 2020 <br />
+    </p>
+  </div>
+</div>
 
 
 <div class="media">
