--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -114,7 +114,7 @@
   <div class="media-body">
     <p class="media-heading">
       <strong>Content-Consistent Matching for Domain Adaptive Semantic Segmentation</strong><br />
-      Guangrui Li, Guoliang Kang, <strong>Yunchao Wei</strong>, Yi Yang<br />
+      Guangrui Li, Guoliang Kang, Wu Liu, <strong>Yunchao Wei</strong>, Yi Yang<br />
       European Conference on Computer Vision (<strong>ECCV</strong>), 2020 <br />
     </p>
   </div>
