--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -150,6 +150,8 @@
       <strong>Interactive Object Segmentation with Inside-Outside Guidance</strong><br />
       Shiyin Zhang, Jun Hao Liew, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 (<strong>oral</strong>)<br />
+      <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Zhang_Interactive_Object_Segmentation_With_Inside-Outside_Guidance_CVPR_2020_paper.pdf">[PDF]</a><a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">[Code]</a><a href="https://youtu.be/DevkxIo-hi8">[Youtube]</a>
+
     </p>
   </div>
 </div>
@@ -158,8 +160,9 @@
   <div class="media-body">
     <p class="media-heading">
       <strong>Memory Aggregation Networks for Efficient Interactive Video Object Segmentation</strong><br />
-      Jiaxu Miao, <strong>Yunchao Wei</strong>,  Yi Yang<br />
+      Jiaxu Miao, <strong>Yunchao Wei</strong>, Yi Yang<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+      <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Miao_Memory_Aggregation_Networks_for_Efficient_Interactive_Video_Object_Segmentation_CVPR_2020_paper.pdf">[PDF]</a><a href="https://github.com/lightas/CVPR2020_MANet">[Code]</a>
     </p>
   </div>
 </div>
@@ -170,6 +173,7 @@
       <strong>Referring Image Segmentation via Cross-Modal Progressive Comprehension</strong><br />
       Shaofei Huang, Tianrui Hui, Si Liu, Guanbin Li, <strong>Yunchao Wei</strong>,  Jizhong Han, Luoqi Liu, Bo Li<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+      <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Huang_Referring_Image_Segmentation_via_Cross-Modal_Progressive_Comprehension_CVPR_2020_paper.pdf">[PDF]</a>
     </p>
   </div>
 </div>
@@ -180,6 +184,7 @@
       <strong>Differential Treatment for Stuff and Things: A Simple Unsupervised Domain Adaptation Method for Semantic Segmentation</strong><br />
       Zhonghao Wang, Mo Yu, <strong>Yunchao Wei</strong>, Rogerio Feris, Jinjun Xiong, Wen-Mei Hwu, Thomas S. Huang, Honghui Shi<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 <br />
+      <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_Differential_Treatment_for_Stuff_and_Things_A_Simple_Unsupervised_Domain_CVPR_2020_paper.pdf">[PDF]</a>
     </p>
   </div>
 </div>
