--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -150,7 +150,9 @@
       <strong>Interactive Object Segmentation with Inside-Outside Guidance</strong><br />
       Shiyin Zhang, Jun Hao Liew, <strong>Yunchao Wei</strong>, Shikui Wei, Yao Zhao<br />
       IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020 (<strong>oral</strong>)<br />
-      <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Zhang_Interactive_Object_Segmentation_With_Inside-Outside_Guidance_CVPR_2020_paper.pdf">[PDF]</a><a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">[Code]</a><a href="https://youtu.be/DevkxIo-hi8">[Youtube]</a>
+      <a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Zhang_Interactive_Object_Segmentation_With_Inside-Outside_Guidance_CVPR_2020_paper.pdf">[PDF]</a>
+	    <a href="https://github.com/shiyinzhang/Inside-Outside-Guidance">[Code]</a>
+	    <a href="https://youtu.be/DevkxIo-hi8">[Youtube]</a><a href="https://www.bilibili.com/video/BV1Pf4y1R7w8/">[Bilibili]</a>
 
     </p>
   </div>
